Merged in fixes/xnat-8542-java21 (pull request #579)
XNAT-8542 Refactored scan ID correction into separate class, added scan validation post-anonymization.

* XNAT-8542 Refactored scan ID correction into separate class, added scan validation post-anonymization.

* XNAT-8542 Fixed regex for matching scan ID


Approved-by: Timothy Olsen
Approved-by: Bin Zhang